Translate all pages to English

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Board - Documents Légaux</title>
+    <title>Beauty Board - Legal Documents</title>
     <style>
         * {
             margin: 0;
@@ -115,32 +115,31 @@
         <div class="card">
             <div class="logo">💅</div>
             <h1>Beauty Board</h1>
-            <p class="tagline">Application de gestion pour instituts de beauté</p>
+            <p class="tagline">Management app for beauty salons</p>
 
             <div class="links">
                 <a href="privacy-policy.html" class="link-card privacy">
                     <span class="link-icon">🔒</span>
                     <div class="link-text">
-                        <div class="link-title">Politique de Confidentialité</div>
-                        <div class="link-desc">Comment nous protégeons vos données</div>
+                        <div class="link-title">Privacy Policy</div>
+                        <div class="link-desc">How we protect your data</div>
                     </div>
                 </a>
 
                 <a href="terms-of-service.html" class="link-card terms">
                     <span class="link-icon">📜</span>
                     <div class="link-text">
-                        <div class="link-title">Conditions d'Utilisation</div>
-                        <div class="link-desc">Règles d'utilisation du service</div>
+                        <div class="link-title">Terms of Service</div>
+                        <div class="link-desc">Rules for using the service</div>
                     </div>
                 </a>
             </div>
 
             <div class="footer">
                 <p>© 2024 Beauty Board</p>
-                <p><a href="mailto:contact@beautyboard.app">contact@beautyboard.app</a></p>
+                <p><a href="mailto:music.music.music.music.music.music@gmail.com">music.music.music.music.music.music@gmail.com</a></p>
             </div>
         </div>
     </div>
 </body>
 </html>
-
