Update contact email to contact@beautyboard.app

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <div class="footer">
                 <p>© 2024 Beauty Board</p>
-                <p><a href="mailto:music.music.music.music.music.music@gmail.com">music.music.music.music.music.music@gmail.com</a></p>
+                <p><a href="mailto:contact@beautyboard.app">contact@beautyboard.app</a></p>
             </div>
         </div>
     </div>
