--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -235,7 +235,7 @@
             <div class="contact">
                 <h3>📧 Contact</h3>
                 <p>For any questions:</p>
-                <p><a href="mailto:music.music.music.music.music.music@gmail.com">music.music.music.music.music.music@gmail.com</a></p>
+                <p><a href="mailto:contact@beautyboard.app">contact@beautyboard.app</a></p>
             </div>
 
             <p class="date">Last updated: December 1, 2024</p>
