--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Board - Legal Documents</title>
+    <title>Pro Board - Legal Documents</title>
+    <meta property="og:site_name" content="Pro Board">
+    <meta name="application-name" content="Pro Board">
+    <meta name="description" content="Pro Board - Professional appointment management application">
     <style>
         * {
             margin: 0;
@@ -14,7 +17,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #fce4ec 0%, #e8eaf6 50%, #c5cae9 100%);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -38,7 +41,7 @@
         }
         h1 {
             font-size: 2.5em;
-            background: linear-gradient(135deg, #e91e63, #9c27b0);
+            background: linear-gradient(135deg, #667eea, #764ba2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -68,10 +71,10 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         }
         .link-card.privacy {
-            background: linear-gradient(135deg, #e91e63, #ad1457);
+            background: linear-gradient(135deg, #667eea, #5a67d8);
         }
         .link-card.terms {
-            background: linear-gradient(135deg, #5c6bc0, #3949ab);
+            background: linear-gradient(135deg, #764ba2, #6b46c1);
         }
         .link-icon {
             font-size: 2em;
@@ -94,7 +97,7 @@
             font-size: 0.9em;
         }
         .footer a {
-            color: #e91e63;
+            color: #667eea;
             text-decoration: none;
         }
         @media (max-width: 500px) {
@@ -113,9 +116,9 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="logo">💅</div>
-            <h1>Beauty Board</h1>
-            <p class="tagline">Management app for beauty salons</p>
+            <div class="logo">📋</div>
+            <h1>Pro Board</h1>
+            <p class="tagline">Professional appointment management</p>
 
             <div class="links">
                 <a href="privacy-policy.html" class="link-card privacy">
@@ -136,8 +139,8 @@
             </div>
 
             <div class="footer">
-                <p>© 2024 Beauty Board</p>
-                <p><a href="mailto:contact@beautyboard.app">contact@beautyboard.app</a></p>
+                <p>© 2024 Pro Board</p>
+                <p><a href="mailto:music.music.music.music+proboard@gmail.com">Contact us</a></p>
             </div>
         </div>
     </div>
